<resources>
    <string name="app_name">Assignment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_heading">First of the few steps to set you up with your bank account</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="terms">Providing PAN and Date of birth helps us find and fetch KYC from a central registry by the government of India.</string>
    <string name="no_pan_text">I don\'t have a PAN</string>
</resources>