<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/twenty_dp"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="S."
                android:textStyle="bold"
                android:textSize="@dimen/twenty_five_sp"
                android:textColor="@color/orange"
                android:id="@+id/logo"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_heading"
                android:textStyle="bold"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:id="@+id/header_title"
                android:layout_marginTop="@dimen/ten_dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_number"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/twenty_dp"
                android:alpha="0.6"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_five_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@drawable/selector_edit_text"
                android:id="@+id/pan"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/ten_dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:textSize="@dimen/twelve_sp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/twenty_dp"
                android:alpha="0.6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/ten_dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty_five_dp"
                    android:background="@drawable/selector_edit_text"
                    android:layout_weight="4"
                    android:id="@+id/date"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:gravity="center"
                    android:digits="0123456789"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty_five_dp"
                    android:background="@drawable/selector_edit_text"
                    android:layout_weight="4"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:id="@+id/month"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:gravity="center"
                    android:digits="0123456789"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/forty_five_dp"
                    android:background="@drawable/selector_edit_text"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:id="@+id/year"
                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="@dimen/ten_dp"
                    android:gravity="center"
                    android:digits="0123456789"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/twenty_dp"
            android:alpha="0.5"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:text="@string/next"
            android:layout_marginTop="@dimen/ten_dp"
            android:id="@+id/submitBtn"
            android:enabled="false"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pan_text"
            android:textSize="@dimen/twelve_sp"
            android:textColor="@color/purple_700"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty_dp"
            android:id="@+id/no_pan_text"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>